--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -5,26 +5,86 @@
 {% block content %}
 
 	<div class="row">
-		<div class="col-md-5 my-auto">
+		<div class="col-md-7">
 			<img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid">
 		</div>
-		<div class="col-md-7">
-			<h3>
-				{{ product.name }}</h3>
-			<p>
-				{{ product.subtitle }}</p>
+		<div class="col-md-5">
+			<p class="product-name"> {{ product.name }}</p>
+			<p> {{ product.subtitle }}</p>
 			<span class="product-page-price">{{ (product.price /100)| number_format(2, ',', '.') }}
 				€</span>
-			<hr>
-			<p>
-				{{ product.description }}
-			</p>
+			<hr class="hr-show-product">
 			<a href="{{ path('add_to_cart', {'id': product.id }) }}"><button class="button arrow">Ajouter au panier</button></a>
+		
+			<!--VERTICAL ACCORDIONS -->
+			<div class="accordion-container">
+				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingOne">
+							<h4 class="panel-title">
+								<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+								Description</a>
+							</h4>
+						</div>
+						<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+							<div class="panel-body">{{ product.description }} </div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingTwo">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								Expédition</a>
+							</h4>
+						</div>
+						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+							<div class="panel-body">
+								<p>Adapté à tous type d'environnement :
+									<br>Canadaire, chameau, dauphin,
+									<br>pigeon (attention aux périodes de chasse)...
+								</p>
+								<p>Même Amaz*n ne peut pas faire plus vite
+								<br>Une preuve ? Commandez !</p>
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingThree">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								Service client</a>
+							</h4>
+						</div>
+						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+							<div class="panel-body">
+								<p>A votre écoute du lundi au vendredi
+								<br>  de 9h à 10 h
+								<br>  et de 14h à 15h</p>
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingFour">
+							<h4 class="panel-title">
+								<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+								Paiement sécurisé</a>
+							</h4>
+						</div>
+						<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+							<div class="panel-body">
+								Nous garantissons à notre clientèle que nous ne mettons 
+								pas l'argent sous un seul matelats, mais sous plusieurs.
+								Faut pas rigoler avec ça.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<hr class="hr-product">
 
-	<p>Retrouvez les tendances du moment</p>
+	<hr class="hr-product">
+	<h3>Retrouvez les tendances du moment</h3>
     <div class="row">
         {% for product in bestProducts %}
             <div class="col-6 col-md-3">
