--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
     <meta name="author" content="La Broudoute, la boutique qui fait Brou, Brou !!">
     <meta name="generator" content="Jekyll v4.1.1">
     <title>{% block title %} La Broudoute {% endblock %}</title>
+    <script src="https://kit.fontawesome.com/784a254d72.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
@@ -24,6 +25,7 @@
 </header> 
         
 <main role="main" id="main">
+    <!--CAROUSEL-->
     {% if block('carousel') is defined %}
     <section id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -33,7 +35,7 @@
         </ol>
         <div class="carousel-inner">
             {% for key,header in headers %}
-                <div class="carousel-item {% if key == 0 %} active {% endif %}" style="background: url('/uploads/{{header.illustration}}');background-size:cover;">
+                <div class="carousel-item {% if key == 0 %} active {% endif %}" style="background: url('/uploads/{{header.illustration}}');background-size:cover;background-position:center;">
                     <div class="container">
                         <div class="carousel-caption text-left">
                             <h1 id="carousel-title">{{ header.title }}</h1>
@@ -63,8 +65,27 @@
 
     <!-- FOOTER -->
 
-    <footer class="container-fluid">
-    <hr>
+        <footer class="container-fluid">
+
+    <section class="icons-banner-section">
+      
+        <div class="icons-banner">
+            <div class="label">
+                <img src="{{ asset('assets/pictures/expedition.png') }}" alt="expedition">
+                <p class=""> <strong>Expédition rapide</strong></p>
+            </div>
+            <div class="label">
+                <img src="{{ asset('assets/pictures/service-clients.png') }}" alt="expedition">
+                <p class=""><strong>Service client disponible</strong></p>
+            </div>
+            <div class="label">
+                <img src="{{ asset('assets/pictures/paiement.png') }}" alt="expedition">
+                <p class=""><strong>Paiement sécurisé</strong></p>
+            </div>
+        </div>
+    </section>
+
+    <div class="color">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -109,6 +130,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
