--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -59,7 +59,7 @@
         </div>
         <hr>
         <div class="text-right mb-5">
-           <a href="{{ path('order') }}" class="btn"><button class="button arrow">Valider mon panier</button></a>
+           <a href="{{ path('order') }}" class="btn"><button class="button button-calypso"><span>Valider mon panier</span></button></a>
         </div>
     {% else %}
         <hr>
