--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,7 +18,7 @@
         {% endfor %}
     </div>
     <div class="home-btn-all-products">
-        <a href="/nos-produits"><button class="button arrow">Voir nos produits</button></a>
+        <a href="/nos-produits"><button class="button button-calypso"><span>Voir nos produits</span></button></a>
     </div>
 
     <!-- FEATURETTE -->
