--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,10 +35,7 @@
                     </label>
                 </div>
             #}
-
-            <button class="btn button arrow mt-5" type="submit">
-                Se connecter
-            </button>
+            <button class="button button-calypso mt-5" type="submit" ><span>Se connecter</span></button>
             <hr>
             <p class="text-center">Vous n'avez pas encore de compte ? <br><a href="{{path('register') }}"> créer votre compte</a></p>
         </form>
