--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -5,7 +5,7 @@
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
-    bottom: 3rem;
+    bottom: 6rem;
     z-index: 10;
 }
 
@@ -19,6 +19,15 @@
     left: 0;
     min-width: 100%;
     height: 32rem;
+}
+
+#carousel-title {
+    font-size: 4em;
+    font-weight: bold;
+}
+
+#carousel-content {
+    font-size: 1.4em;
 }
 
 /* HOME PRODUCTS
@@ -53,48 +62,90 @@
 
 .button {
     position: relative;
-    height: 75px;
-    width: 180px;
-    padding: 10px;
-    font-weight: 700;
+    padding: 20px;
     font-size: 15px;
     letter-spacing: 2px;
-    color: var(--second-color);
+    color: var(--second-color) !important;
     border: 2px #f1e4d8 solid;
     border-radius: 4px;
     text-transform: uppercase;
-    outline: 0;
-    overflow:hidden;
-    background: none;
-    z-index: 1;
+    background: var(--main-color);
     cursor: pointer;
-    transition:         0.08s ease-in;
-    -o-transition:      0.08s ease-in;
-    -ms-transition:     0.08s ease-in;
-    -moz-transition:    0.08s ease-in;
-    -webkit-transition: 0.08s ease-in;
 }
 
-.arrow{
-    text-align:left;
-    padding-left:17px;
+.button::before,
+.button::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
-.arrow:before{
-    content:"→";
-    position:absolute;
-    color:#383736;
-    left: 83%;
-    opacity: 0;
+.button-calypso {
+	overflow: hidden;
+	border-radius: 1rem;
 }
 
-.arrow:hover:before{
-    left:84%;
-    opacity:1;
+.button-calypso span {
+	display: block;
+	position: relative;
+	mix-blend-mode: difference;
+	z-index: 10;
+    color: #fff !important;
 }
 
-.arrow:hover {
-    width:200px;
+.button-calypso:hover span {
+	animation: MoveScaleUpInitial 0.3s forwards, MoveScaleUpEnd 0.3s forwards 0.3s;
+}
+
+@keyframes MoveScaleUpInitial {
+	to {
+		transform: translate3d(0,-105%,0) scale3d(1,2,1);
+		opacity: 0;
+	}
+}
+
+@keyframes MoveScaleUpEnd {
+	from {
+		transform: translate3d(0,100%,0) scale3d(1,2,1);
+		opacity: 0;
+	}
+	to {
+		transform: translate3d(0,0,0);
+		opacity: 1;
+	}
+}
+
+.button-calypso::before {
+	content: '';
+    background: #fff;
+	width: 120%;
+	height: 0;
+	padding-bottom: 120%;
+	top: -110%;
+	left: -10%;
+	border-radius: 50%;
+	transform: translate3d(0,68%,0) scale3d(0,0,0);
+}
+
+.button-calypso:hover::before {
+	transform: translate3d(0,0,0) scale3d(1,1,1);
+	transition: transform 0.3s cubic-bezier(0.1, 0, 0.3, 1);
+}
+
+.button-calypso::after {
+	content: '';
+    background: #fff;
+	transform: translate3d(0,-100%,0);
+	transition: transform 0.3s cubic-bezier(0.1, 0, 0.3, 1);
+}
+
+.button-calypso:hover::after {
+	transform: translate3d(0,0,0);
+	transition-duration: 0.05s;
+	transition-delay: 0.3s;
+	transition-timing-function: linear;
 }
 
 /* Center align the text within the three columns below the carousel */
@@ -140,7 +191,7 @@
     z-index: 1;
     top: 150px;
     margin: 15px;
-    background: #f1e4d8;
+    background: var(--main-color);
     width: 90%;
     text-align: center;
     height: auto;
@@ -155,7 +206,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    background: #f1e4d8;
+    background: var(--main-color);
     margin-right: -18px;
     margin-left: -18px; 
     padding: 30px 0;
@@ -187,59 +238,6 @@
     letter-spacing: -.05rem;
 }
 
-/* VERTICAL ACCORDION
--------------------------------------------------- */
-.accordion {
-    max-width: 800px;
-    margin-top: 80px;
-    margin-bottom: 80px;
-} 
-
-.accordion .contentBox {
-    position: relative;
-    margin: 10px 20px;
-}
-
-.accordion .contentBox .label {
-    position: relative;
-    padding: 10px;
-    color: var(--second-color);
-    cursor: pointer;
-    text-align: center;
-    border-bottom: 1px solid var(--second-color);
-}
-
-.accordion .contentBox .label::before {
-    content: url("../pictures/down-arrow.png");
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-    font-size: 1.5rem;
-}
-
-.accordion .contentBox.active .label::before {
-    content: url("../pictures/up-arrows.png");
-}
-
-.accordion .contentBox .content {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    transition: 0.5s;
-    overflow-y: auto;
-}
-
-.accordion .contentBox.active .content {
-    height: 150px;
-    padding: 10px;
-}
-
-.accordion .content p{
-    text-align: center;
-    font-style: italic;
-}
-
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media (min-width: 40em) {
@@ -248,6 +246,14 @@
         margin-bottom: 1.25rem;
         font-size: 1.25rem;
         line-height: 1.4;
+    }
+
+    #carousel-title {
+        font-size: 6em;
+    }
+
+    #carousel-content {
+        font-size: 2em;
     }
 
     .featurette-heading {
