--- a/public/assets/css/navBar.css
+++ b/public/assets/css/navBar.css
@@ -8,7 +8,7 @@ a {
 
 header {
     top: 0px;
-    background-color: #f1e4d8;
+    background: var(--main-color);
     width: 100%;
     z-index: 1000;
 }
@@ -160,7 +160,7 @@ header {
 
     .hamburger-logo {
         position: absolute;
-        top: 0.3rem;
+        top: 0.6rem;
         right: 6rem;
         width: 10rem;
         height: auto;
@@ -185,7 +185,7 @@ header {
         height: calc(100vh);
         left: 0;
         width: 100%;
-        background-color: #f1e4d8;        
+        background: var(--main-color);
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
