--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Mes adresses - La Broudoute{% endblock %}
 
 {% block content %}
-	<a href="{{ path('account_address_add') }}" class="btn btn-info sm float-right">Ajouter une adresse</a>
 	<h1>Mes adresses</h1>
 	<p>vous pouvez modifier vos adresses dans cet espace</p>
 	<a href="{{ path('account') }}">Retour</a>
@@ -32,6 +31,8 @@
             {% endfor %}
         </div>
 	{% endif %}
+    <a href="{{ path('account_address_add') }}" class="btn button mt-5">Ajouter une adresse</a>
+
 
 {% endblock %}
 
