--- a/templates/home/navBar.html.twig
+++ b/templates/home/navBar.html.twig
@@ -3,7 +3,7 @@
 {% block navBar %} 
     <div class="logo-container">
         <div class="logo">
-            <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-broudoute.png') }}" class="logo" alt="logo-la-broudoute"></a>
+            <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo.png') }}" class="logo" alt="logo-la-broudoute"></a>
         </div>
     </div>
     <nav class="container container-nav">
@@ -40,7 +40,7 @@
         <div class="hamburger-menu-container">
             <div class="hamburger-menu">
                 <div></div>
-                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-broudoute.png') }}" class="hamburger-logo" alt="logo-la-broudoute"></a>
+                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo.png') }}" class="hamburger-logo" alt="logo-la-broudoute"></a>
             </div>
         </div>
     </nav>
