--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -18,7 +18,6 @@ body, html {
 
 #main {
     position: relative;
-    /*min-height: 100%;*/
     min-height: 80%;
     padding-bottom: 200px;
 }
@@ -175,6 +174,122 @@ ul {
 
 .panel-body {
     padding: 15px;
+}
+
+/* MODAL PICTURE
+-------------------------------------------------- */
+#myImg {
+  cursor: zoom-in;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {  
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)} 
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)} 
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 1000px){
+    .modal-content {
+        width: 100%;
+    }
+
+    .close {
+        position: absolute;
+        top: 10%;
+        right: 10%;
+        color: #000;
+        font-size: 40px;
+        font-weight: bold;
+        transition: 0.3s;
+        z-index: 100;
+    }
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
+
+    .close {
+        position: absolute;
+        top: 15%;
+        right: 5%;
+        color: #000;
+        font-size: 40px;
+        font-weight: bold;
+        transition: 0.3s;
+        z-index: 100;
+    }
 }
 
 /* ORDER / INDEX
