--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
                         <div class="carousel-caption text-left">
                             <h1 id="carousel-title">{{ header.title }}</h1>
                             <p id="carousel-content">{{ header.content }}</p>
-                            <p><a href="{{ header.btnUrl }}"><button class="button button-calypso"><span>{{ header.btnTitle }}</span></button></a></p>
+                            <p><a href="{{ header.btnUrl }}"><button class="button-design">{{ header.btnTitle }}</button></a></p>
 
                         </div>
                     </div>
@@ -63,78 +63,75 @@
     </section>
 
     <!-- FOOTER -->
-
     <footer class="container-fluid">
-
-    <section class="icons-banner-section">
-      
-        <div class="icons-banner">
-            <div class="label">
-                <img src="{{ asset('assets/pictures/expedition.png') }}" alt="expedition">
-                <p class=""> <strong>Expédition rapide</strong></p>
-            </div>
-            <div class="label">
-                <img src="{{ asset('assets/pictures/service-clients.png') }}" alt="expedition">
-                <p class=""><strong>Service client disponible</strong></p>
-            </div>
-            <div class="label">
-                <img src="{{ asset('assets/pictures/paiement.png') }}" alt="expedition">
-                <p class=""><strong>Paiement sécurisé</strong></p>
-            </div>
-        </div>
-    </section>
-
-    <div class="color">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-6 px-4">
-                            <div class="logo-part">
-                                <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-broudoute.png') }}" class="w-75 logo-footer" alt="logo-la-broudoute"></a>
-                                <p class="p-under-logo-footer">12, rue des Lilas</p>
-                                <p>Une vile comme une autre</p>
-                            </div>
-                        </div>
-                        <div class="responsives-col col-md-6 px-4">
-                            <p class="footer-p-underline"> À propos de l'entreprise</p>
-                            <a href="#" class="btn-footer"> Plus d'infos </a><br>
-                            <a href="#" class="btn-footer"> Nous contacter</a>
-                        </div>
-                    </div>
+        <section class="icons-banner-section"> 
+            <div class="icons-banner">
+                <div class="label">
+                    <img src="{{ asset('assets/pictures/expedition.png') }}" alt="expedition">
+                    <p class=""> <strong>Expédition rapide</strong></p>
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="responsives-col col-md-6 px-4">
-                            <p class="footer-p-underline"> Service client</p>
-                            <div class="row">
-                                <div class="col-12">
-                                    <ul>
-                                        <li> <a href="#"> Aide & FAQ</a> </li>
-                                        <li> <a href="#"> Retours & échanges</a> </li>
-                                        <li> <a href="#"> Mentions légales</a> </li>
-                                    </ul>
+                <div class="label">
+                    <img src="{{ asset('assets/pictures/service-clients.png') }}" alt="expedition">
+                    <p class=""><strong>Service client disponible</strong></p>
+                </div>
+                <div class="label">
+                    <img src="{{ asset('assets/pictures/paiement.png') }}" alt="expedition">
+                    <p class=""><strong>Paiement sécurisé</strong></p>
+                </div>
+            </div>
+        </section>
+
+        <div class="color">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-6 px-4">
+                                <div class="logo-part">
+                                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo.png') }}" class="w-75 logo-footer" alt="logo-la-broudoute"></a>
+                                    <p class="p-under-logo-footer">12, rue des Lilas</p>
+                                    <p>Une vile comme une autre</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="responsives-col col-md-6 ">
-                            <p class="footer-p-underline"> Suivez-nous</p class="footer-underline">
-                            <div class="social">
-                                <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-facebook.png') }}" class="w-14 logo-footer" alt="logo-la-broudoute"></a>
-                                <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-instagram.png') }}" class="w-14 logo-footer" alt="logo-la-broudoute"></a>
+                            <div class="responsives-col col-md-6 px-4">
+                                <p class="footer-p-underline"> À propos de l'entreprise</p>
+                                <a href="#" class="btn-footer"> Plus d'infos </a><br>
+                                <a href="#" class="btn-footer"> Nous contacter</a>
                             </div>
-                            <p>&copy; 2021 La Broudoute</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="responsives-col col-md-6 px-4">
+                                <p class="footer-p-underline"> Service client</p>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <ul>
+                                            <li> <a href="#"> Aide & FAQ</a> </li>
+                                            <li> <a href="#"> Retours & échanges</a> </li>
+                                            <li> <a href="#"> Mentions légales</a> </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="responsives-col col-md-6 ">
+                                <p class="footer-p-underline"> Suivez-nous</p class="footer-underline">
+                                <div class="social">
+                                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-facebook.png') }}" class="w-14 logo-footer" alt="logo-la-broudoute"></a>
+                                    <a href="{{ path('home') }}"><img src="{{ asset('assets/pictures/logo-instagram.png') }}" class="w-14 logo-footer" alt="logo-la-broudoute"></a>
+                                </div>
+                                <p>&copy; 2021 La Broudoute</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 <script src="{{ asset('assets/js/accordion-home.js') }}"></script>
-
+<script src="{{ asset('assets/js/fullscreen-picture.js') }}"></script>
 </body>
 </html>
