--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -6,7 +6,13 @@
 
 	<div class="row">
 		<div class="col-md-7">
-			<img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="img-fluid">
+			<img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" id="modal-picture" class="img-fluid"/>		
+			<!-- MODAL PICTURE CF FULLSCREEN-PICTURE.JS -->
+			<div id="modal" class="modal">
+				<span class="close">&times;</span>
+				<img class="modal-content" id="pict">
+				<div id="caption"></div>
+			</div>
 		</div>
 		<div class="col-md-5">
 			<p class="product-name"> {{ product.name }}</p>
@@ -14,7 +20,7 @@
 			<span class="product-page-price">{{ (product.price /100)| number_format(2, ',', '.') }}
 				€</span>
 			<hr class="hr-show-product">
-			<a href="{{ path('add_to_cart', {'id': product.id }) }}"><button class="button button-calypso"><span>Ajouter au panier</span></button></a>
+			<a href="{{ path('add_to_cart', {'id': product.id }) }}"><button class="button-design"><span>Ajouter au panier</span></button></a>
 		
 			<!--VERTICAL ACCORDIONS -->
 			<div class="accordion-container">
