add legal notice

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,6 +64,7 @@
 
     <!-- FOOTER -->
     <footer class="container-fluid">
+        <hr>
         <section class="icons-banner-section"> 
             <div class="icons-banner">
                 <div class="label">
@@ -107,9 +108,9 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <ul>
+                                            <li> <a href="{{ path('legal_notice')}}"> Mentions légales</a> </li>
                                             <li> <a href="#"> Aide & FAQ</a> </li>
                                             <li> <a href="#"> Retours & échanges</a> </li>
-                                            <li> <a href="#"> Mentions légales</a> </li>
                                         </ul>
                                     </div>
                                 </div>
