--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -178,12 +178,12 @@ ul {
 
 /* MODAL PICTURE
 -------------------------------------------------- */
-#myImg {
+#modal-picture {
   cursor: zoom-in;
   transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
+#modal-picture:hover {opacity: 0.7;}
 
 /* The Modal (background) */
 .modal {
