--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -31,7 +31,7 @@
             {% endfor %}
         </div>
 	{% endif %}
-    <a href="{{ path('account_address_add') }}" class="btn button mt-5">Ajouter une adresse</a>
+    <a href="{{ path('account_address_add') }}" class="button-design mt-5">Ajouter une adresse</a>
 
 
 {% endblock %}
