--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -39,5 +39,5 @@
         </div>
     </div>
     <hr>
-           <a href="{{ path('app_logout') }}"><button class="button button-calypso"><span>Déconnexion</span></button></a>
+           <a href="{{ path('app_logout') }}"><button class="button-design"><span>Déconnexion</span></button></a>
 {% endblock %}
