--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,7 +18,7 @@
         {% endfor %}
     </div>
     <div class="home-btn-all-products">
-        <a href="/nos-produits"><button class="button button-calypso"><span>Voir nos produits</span></button></a>
+        <a href="/nos-produits" class=""><button class="button-design">Voir nos produits</button></a>
     </div>
 
     <!-- FEATURETTE -->
@@ -27,13 +27,13 @@
             <img src="{{ asset('assets/pictures/home-img-large.png') }}" class="img-large img-fluid mx-auto " alt="image">
         </div>
         <div class="col-md-6">
-            <img src="{{ asset('assets/pictures/logo-broudoute2.png') }}" class="img-small img-fluid mx-auto" alt="logo">
             <hr>
             <p>
                 "Des produits pas forcément utiles, enfin, peut être, des fois un peu, ca dépend du moment,
                 après, est-ce vraiment différent de ce que l'on trouve ailleurs ? <br>Et puis c'est votre argent, alors pourquoi pas
                 se faire plaisir, on n'a qu'une vie après tout bordel."
             </p>
+            <hr>
         </div>
     </div>
 {% endblock %}
