--- a/templates/order_validate/cancel.html.twig
+++ b/templates/order_validate/cancel.html.twig
@@ -12,7 +12,7 @@
             Une confirmation d'erreur vient de vous être envoyé par email à l'adresse <strong>{{ order.user.email }}</strong>.
             <hr>
         </p>
-        <a class="btn button arrow"href="{{ path('order') }}">Réessayer votre paiement</a>
+        <a class="button-design"href="{{ path('order') }}">Réessayer votre paiement</a>
 
     </div>
 
