--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -60,92 +60,58 @@
     margin: 100px 0;
 }
 
-.button {
+/* BUTTON HOVER STYLE */
+.button-design {
     position: relative;
+    display: inline-block;
+    text-decoration: none;
     padding: 20px;
     font-size: 15px;
     letter-spacing: 2px;
     color: var(--second-color) !important;
     border: 2px #f1e4d8 solid;
-    border-radius: 4px;
+    border-radius: 6px;
     text-transform: uppercase;
-    background: var(--main-color);
+    transition: all .15s ease-in-out;
     cursor: pointer;
+    background: none;
 }
 
-.button::before,
-.button::after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+.button-design:hover {
+    /*color: #fff !important;*/
+    text-decoration: none;
 }
 
-.button-calypso {
-	overflow: hidden;
-	border-radius: 1rem;
+.button-design:hover:before {
+    width: 100%;
+    left: 0;
+    right: auto;
 }
 
-.button-calypso span {
-	display: block;
-	position: relative;
-	mix-blend-mode: difference;
-	z-index: 10;
-    color: #fff !important;
+/* Second background */
+.button-design:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: auto;
+    right: 0;
+    width: 0;
+    height: 100%;
+    background: #fff !important;
+    transition: all .15s ease-in-out;
+    z-index: -1;
 }
 
-.button-calypso:hover span {
-	animation: MoveScaleUpInitial 0.3s forwards, MoveScaleUpEnd 0.3s forwards 0.3s;
-}
-
-@keyframes MoveScaleUpInitial {
-	to {
-		transform: translate3d(0,-105%,0) scale3d(1,2,1);
-		opacity: 0;
-	}
-}
-
-@keyframes MoveScaleUpEnd {
-	from {
-		transform: translate3d(0,100%,0) scale3d(1,2,1);
-		opacity: 0;
-	}
-	to {
-		transform: translate3d(0,0,0);
-		opacity: 1;
-	}
-}
-
-.button-calypso::before {
-	content: '';
-    background: #fff;
-	width: 120%;
-	height: 0;
-	padding-bottom: 120%;
-	top: -110%;
-	left: -10%;
-	border-radius: 50%;
-	transform: translate3d(0,68%,0) scale3d(0,0,0);
-}
-
-.button-calypso:hover::before {
-	transform: translate3d(0,0,0) scale3d(1,1,1);
-	transition: transform 0.3s cubic-bezier(0.1, 0, 0.3, 1);
-}
-
-.button-calypso::after {
-	content: '';
-    background: #fff;
-	transform: translate3d(0,-100%,0);
-	transition: transform 0.3s cubic-bezier(0.1, 0, 0.3, 1);
-}
-
-.button-calypso:hover::after {
-	transform: translate3d(0,0,0);
-	transition-duration: 0.05s;
-	transition-delay: 0.3s;
-	transition-timing-function: linear;
+/*First background*/
+.button-design:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -2;
+    background:var(--main-color) !important;
+    height: 100%;
+    width: 100%;
 }
 
 /* Center align the text within the three columns below the carousel */
@@ -221,8 +187,7 @@
 
 .home-presentation p {
     max-width: 450px;
-    font-size: 18px;
-    text-align: center;
+    text-align: justify;
     font-style: italic;
 }
 
@@ -288,6 +253,10 @@
         width: 500px;
         height: auto;
         float: right;
+    }
+
+    .home-presentation p {
+        font-size: 18px;
     }
 
     .home-presentation hr {
