--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{asset('assets/css/navBar.css')}}">
     <link rel="stylesheet" href="{{asset('assets/css/cart.css')}}">
 
+
     <!-- Custom styles for this template -->
     <link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
 </head>
@@ -134,5 +135,7 @@
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 <script src="{{ asset('assets/js/accordion-home.js') }}"></script>
 <script src="{{ asset('assets/js/fullscreen-picture.js') }}"></script>
+<script src="{{ asset('assets/js/slider.js') }}"></script>
+
 </body>
 </html>
