--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -5,6 +5,59 @@
 
 {% block content %}
 
+	<div class="js-filter">
+		<div class="row">
+			<div class="col-md-3 js-filter-form">
+				<h3 class="filter-title">Filtrer</h3>
+				<!-- CF:	src/classe/search.php 
+							request findWithSearch from ProductRepository
+							Form SearchType               
+				-->
+				{{ form_start(form, {attr: {class: 'filter'}}) }} <!-- filter cf nav.css -->
+					{{ form_row(form.string) }}
+					<h4>catégories</h4>
+					{{ form_row(form.categories) }}
+					<h4>prix</h4>
+					<div class="row">
+						<div class="col-md-6"> {{form_row(form.min)}}</div>
+						<div class="col-md-6"> {{form_row(form.max)}}</div>
+					</div>
+					<div id="slider"></div>
+					<h4>Promotions</h4>
+					{{ form_row(form.promo) }}
+				{{ form_end(form) }} <!-- filter cf nav.css -->
+			</div>
+			<div class="col-md-9">
+				<h3>Nos produits</h3>
+
+				<div class="row product-container js-filter-content">
+					{% for product in products %}
+						<div class="col-6 col-md-4">
+							<div class="product-item text-center">
+								<a href="{{ path('product', {'slug':product.slug }) }}"><img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="products-picture img-fluid"></a>
+								<p class="product-name">{{ product.name }}</p>
+								<p class="product-subtitle">{{ product.subtitle }}</p>
+								<p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}€</p>								
+								<p>{% if product.promo %} 
+									<div class="text text-warning">Promo</div> 
+									{% endif %}
+								</p>
+								{# divided by 100 because recorded in float #}
+							</div>
+						</div>
+					{% endfor %}
+				</div>
+						<div>
+			{{ knp_pagination_render(products) }} 
+		</div>
+			</div>
+		</div>
+
+	</div>
+
+
+
+{#}
 	<div class="row">
 		<div class="col-md-3">
 		<h3 class="filter-title">Filtrer</h3>
@@ -28,11 +81,13 @@
 							<p class="product-price">{{ (product.price / 100) | number_format(2, ',', '.') }}
 								€</p>
 							{# divided by 100 because recorded in float #}
+{#}
 						</div>
 					</div>
 				{% endfor %}
 			</div>
 		</div>
 	</div>
+	#}
 
 	{% endblock %}
